# project3-autograder

./: README.txt  autograder.py  compare.py  output.csv  requirements.txt  run_checks.sh  tony_up.csv
extracted_submissions/atkinsonalea/: CMakeLists.txt
extracted_submissions/atkinsonalea/src/: Image.cpp  Image.h  imageprocessor.cpp
extracted_submissions/fernandezleonardo/: CMakeLists.txt
extracted_submissions/fernandezleonardo/src/: imageProcessor.cpp
extracted_submissions/gargyarohun/src/: Header.cpp  Header.h  Main.cpp  Pixel.cpp  Pixel.h
extracted_submissions/guptasunny/: CMakeLists.txt
extracted_submissions/guptasunny/src/: Header.h  TgaFile.cpp  TgaFile.h  main.cpp
extracted_submissions/kohlikeerat/: CMakeLists.txt
extracted_submissions/kohlikeerat/src/: Header.cpp  Header.h  ImageProcessing.cpp  ImageProcessing.h  Pixel.h  UnitTesting.cpp  UnitTesting.h  main.cpp
extracted_submissions/lisammy/: CMakeLists.txt
extracted_submissions/lisammy/src/: Image.cpp  Image.h  (+5 more)
extracted_submissions/luis/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project03
extracted_submissions/mansourbelal/: ._CMakeLists.txt  CMakeLists.txt
extracted_submissions/mansourbelal/src/: another1.cpp
extracted_submissions/mansourbelal/src_1/: ._another1.cpp  ._readme.txt
extracted_submissions/meitina/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
extracted_submissions/moykristen/: CMakeLists.txt
extracted_submissions/tembraslucas/: ._src  CMakeLists.txt
extracted_submissions/torosdaglidogan/: Makefile
submissions/: readme.txt
(+25 files in other folders)
